feat(server): finalize core infrastructure and documentation
- Added services: MongoDB, NGINX reverse proxy, Pi-hole, Redis, Vaultwarden, Portainer, WireGuard, Quiz, and Quiz Service.
- Configured all services to use a shared external Docker network (`core-network`).
- Secured secrets via `.env.example` files and updated `.gitignore` to exclude persistent and config volumes.
- Improved README files with consistent volume structure, cleanup instructions, and proxy configuration.
- Updated root README with network creation instructions and detailed service overview.

Establishes a clean, modular, and fully documented self-hosted server environment.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@
 !**/.env.example
 
 # Volumes/data
+**/acme/
+**/certs/
+**/conf/
 **/config/
 **/data/
+**/etc-dnsmasq.d/
+**/etc-pihole/
 **/logs/
+**/uploads/
