--- a/mongodb/docker-compose.yml
+++ b/mongodb/docker-compose.yml
@@ -1,14 +1,16 @@
 version: "3.8"
 
 services:
-  portainer:
-    image: portainer/portainer-ce:lts
-    container_name: portainer
+  mongodb:
+    image: mongo:8.0.9
+    container_name: mongodb
+    hostname: mongodb
     restart: unless-stopped
+    ports:
+      - "27017:27017"
     env_file: ./.env
     volumes:
-      - ./data:/data
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ./data:/data/db
     networks:
       - core-network
 
