--- a/vaultwarden/docker-compose.yml
+++ b/vaultwarden/docker-compose.yml
@@ -1,14 +1,13 @@
 version: "3.8"
 
 services:
-  portainer:
-    image: portainer/portainer-ce:lts
-    container_name: portainer
+  vaultwarden:
+    image: vaultwarden/server:1.33.2-alpine
+    container_name: vaultwarden
     restart: unless-stopped
     env_file: ./.env
     volumes:
       - ./data:/data
-      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - core-network
 
