--- a/wireguard/docker-compose.yml
+++ b/wireguard/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   wireguard:
-    image: lscr.io/linuxserver/wireguard:latest
+    image: linuxserver/wireguard:1.0.20210914
     container_name: wireguard
     restart: unless-stopped
     cap_add:
@@ -10,9 +10,12 @@ services:
       - SYS_MODULE
     ports:
       - "51820:51820/udp"
+    dns:
+      172.20.0.8
     env_file: ./.env
     volumes:
       - ./config:/config
       - /lib/modules:/lib/modules
+      - /usr/src:/usr/src
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
