feat(github-runner, registry): add GitHub Actions runner and private Docker registry services
- Introduced `github-runner` service using `myoung34/github-runner` with host networking for CI workflows.
- Supports repository-level jobs for the `quiz` repo using a personal access token.
- Added persistent volume mounts for runner cache and state.

- Added `registry` service using `registry:2` with basic auth and TLS.
- Credentials stored in `registry/auth`, certificates in `registry/certs`, and images in `registry/data`.

- Updated root README with descriptions for both services.
- Extended `.gitignore` to exclude runner work directories and auth files.

Lays the foundation for self-hosted CI/CD and internal image publishing.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 # Volumes/data
 **/acme/
+**/auth/
 **/certs/
 **/conf/
 **/config/
@@ -13,3 +14,4 @@
 **/etc-pihole/
 **/logs/
 **/uploads/
+**/_work/
