chore(github-runner): update runner labels
- Removed 'docker' and 'prod' labels from the runner configuration.
- Retained only the 'self-hosted' label for cleaner identification and routing.

This simplifies label management and avoids unintentional runner targeting.

--- a/github-runner/docker-compose.yml
+++ b/github-runner/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       CONFIGURED_ACTIONS_RUNNER_FILES_DIR: /runner/data
       DISABLE_AUTOMATIC_DEREGISTRATION: true
       RUNNER_SCOPE: 'repo'
-      LABELS: self-hosted,docker,prod
+      LABELS: self-hosted
     security_opt:
       - label:disable
     volumes:
